fix(paginator): Fix xs paginator page numbers wrapping

--- a/packages/components/paginator/src/paginator.scss
+++ b/packages/components/paginator/src/paginator.scss
@@ -27,11 +27,14 @@
   sl-select {
     min-inline-size: var(--sl-size-1000);
   }
+
+  sl-option::part(wrapper) {
+    white-space: nowrap;
+  }
 }
 
 .page {
   box-sizing: border-box;
-  color: var(--sl-color-foreground-neutral-bold);
   flex-shrink: 0;
   inline-size: calc(1lh + (var(--sl-size-100) * 2));
   padding-inline: 0;
